# openat

./: .gitignore  .travis.yml  Cargo.toml  README.md  README.rst  build.rs  rustfmt.toml  vagga.yaml
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: count_processes.rs
conf_tests/: fcntl_f_dupfd_cloexec.rs  fcntl_o_directory.rs  link_file_at.rs  o_directory.rs  o_path.rs  o_search.rs  o_tmpfile.rs  proc_self_fd.rs  rename_exchange.rs  renameat_flags.rs
examples/: exchange.rs
src/: builder.rs  dir.rs  ffi.rs  filetype.rs  lib.rs  list.rs  metadata.rs  name.rs
tests/: flagsbuilder.rs  tmpfile.rs
