[package]
name = "openat"
description = """
    A wrapper around openat, symlinkat, and similar system calls
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["open", "openat", "filesystem", "fs"]
categories = ["filesystem", "api-bindings"]
homepage = "http://github.com/tailhook/openat"
documentation = "http://docs.rs/openat"
version = "0.1.18"
authors = ["paul@colomiets.name"]

[dependencies]
libc = "0.2.34"

[dev-dependencies]
argparse = "0.2.1"
tempfile = "3.0.3"
